[gd_scene load_steps=5 format=3 uid="uid://tj1lnfakvxin"]

[ext_resource type="Script" uid="uid://bp37cwg6wvckf" path="res://Inventory/item_ui.gd" id="1_au8ig"]
[ext_resource type="Texture2D" uid="uid://b7pqjlc5pgemm" path="res://baubles/pikminPlaceholder.webp" id="2_rqwbc"]
[ext_resource type="Resource" uid="uid://bnqkjk51xm27m" path="res://pickups/pickup_resource/item_ruby.tres" id="2_xfyse"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jh323"]
size = Vector2(32.5, 33.5)

[node name="Item" type="Control" groups=["Item"]]
z_index = 2
layout_mode = 3
anchor_right = 0.1
anchor_bottom = 0.178
offset_bottom = -0.0800018
pivot_offset = Vector2(32, 32)
mouse_filter = 1
script = ExtResource("1_au8ig")
type = ExtResource("2_xfyse")

[node name="Sprite2D" type="Sprite2D" parent="." groups=["Item"]]
z_index = 1
position = Vector2(15.5, 15.875)
scale = Vector2(0.206667, 0.0978962)
texture = ExtResource("2_rqwbc")
offset = Vector2(-7.62939e-06, 0)

[node name="Area2D" type="Area2D" parent="." groups=["Item"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" groups=["Item"]]
visibility_layer = 2
position = Vector2(16, 16)
shape = SubResource("RectangleShape2D_jh323")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="area_shape_entered" from="Area2D" to="." method="_on_area_2d_area_shape_entered"]
[connection signal="area_shape_exited" from="Area2D" to="." method="_on_area_2d_area_shape_exited"]
